package core;

import com.zaxxer.hikari.HikariDataSource;

import java.lang.reflect.Field;
import java.sql.PreparedStatement;
import java.sql.ResultSet;
import java.sql.SQLException;
import java.util.List;
import java.util.Optional;

public class DatabaseManager {

    /* =========================
       Singleton Instance
       ========================= */

    private static DatabaseManager instance;

    /* =========================
       DataSource & Config
       ========================= */

    private HikariDataSource dataSource;

    private static String URL;
    private static String USER;
    private static String PASSWORD;

    /* =========================
       Constructor
       ========================= */

    private DatabaseManager() {
        initializeDatabase();
    }

    /* =========================
       Lifecycle & Setup
       ========================= */

    public static synchronized DatabaseManager getInstance() {
        if (instance == null) {
            instance = new DatabaseManager();
        }
        return instance;
    }

    public void shutdown() {
        // TODO: close datasource
    }

    private void initializeDatabase() {
        // TODO: initialize HikariCP and database
    }

    public void seedDatabase() {
        // TODO: seed initial data
    }

    /* =========================
       Core Execution
       ========================= */

    public <T> T executeQuery(
            String sql,
            QueryHandler<T> handler,
            Object[] params
    ) {
        // TODO: execute query and map result
        return null;
    }

    public int executeUpdate(String sql, Object[] params) {
        // TODO: execute update
        return 0;
    }

    public int executeInsert(String sql, Object[] params) {
        // TODO: execute insert and return generated key
        return 0;
    }

    public <T> List<T> fetchList(
            String sql,
            QueryHandler<T> rowMapper,
            Object[] params
    ) {
        // TODO: fetch multiple rows
        return null;
    }

    public <T> T fetch(
            String sql,
            QueryHandler<T> rowMapper,
            Object[] params
    ) {
        // TODO: fetch single row
        return null;
    }

    /* =========================
       Object Retrieval (ORM)
       ========================= */

    public <T> T fetchOne(
            Class<T> clazz,
            String idColumn,
            Object idValue
    ) {
        // TODO: fetch entity by ID
        return null;
    }

    public <T> List<T> fetchMany(
            Class<T> clazz,
            String fkColumn,
            Object value
    ) {
        // TODO: fetch entities by FK
        return null;
    }

    public <T> List<T> fetchManyToMany(
            Class<T> targetClass,
            String joinTable,
            String joinCol,
            String invJoinCol,
            Object sourceId
    ) {
        // TODO: fetch many-to-many relationship
        return null;
    }

    private <T> QueryHandler<T> autoMapper(Class<T> clazz) {
        // TODO: auto map ResultSet to object
        return null;
    }

    /* =========================
       Persistence
       ========================= */

    public <T> void upsertAll(List<T> items) {
        // TODO: batch upsert
    }

    public <T> void upsert(T item) {
        // TODO: upsert single item
    }

    public <T> void delete(T item) {
        // TODO: delete entity
    }

    public <T> void deleteAll(List<T> items) {
        // TODO: batch delete
    }

    private <T> void propagateGeneratedKeys(
            PreparedStatement pstmt,
            List<T> items,
            List<Field> localFields
    ) throws SQLException {
        // TODO: propagate generated keys
    }

    /* =========================
       Reflection & SQL Building
       ========================= */

    protected String buildUpsertSql(
            String tableName,
            List<Field> allColumns,
            List<Field> keyColumns
    ) {
        // TODO: build upsert SQL
        return null;
    }

    protected String buildJoinedFromClause(Class<?> clazz) {
        // TODO: build JOIN clause
        return null;
    }

    private List<Class<?>> getTableHierarchy(Class<?> clazz) {
        // TODO: resolve inheritance hierarchy
        return null;
    }

    private List<Field> getAnnotatedFields(Class<?> clazz) {
        // TODO: get annotated fields
        return null;
    }

    private List<Field> getAllAnnotatedFields(Class<?> clazz) {
        // TODO: get all annotated fields
        return null;
    }

    private List<Field> getIdAnnotatedFields(List<Field> allFields) {
        // TODO: get ID fields
        return null;
    }

    private String getPrimaryIdColumnName(Class<?> targetClass) {
        // TODO: get primary ID column name
        return null;
    }

    private Optional<Field> getPrimaryIdColumn(Class<?> targetClass) {
        // TODO: get primary ID column
        return Optional.empty();
    }

    private List<Field> getUpsertFields(
            List<Field> allFields,
            Class<?> clazz
    ) {
        // TODO: get upsert fields
        return null;
    }

    private void setParameters(
            PreparedStatement pstmt,
            Object[] params
    ) throws SQLException {
        // TODO: bind parameters
    }
}

